objects/MC4SF__MC_List__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Avg_Click_Rate__c</fullName>
        <label>Avg Click Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MC4SF__Avg_Open_Rate__c</fullName>
        <label>Avg Open Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MC4SF__Avg_Sub_Rate__c</fullName>
        <label>Avg Sub Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Avg_Unsub_Rate__c</fullName>
        <label>Avg Unsub Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Beamer_Address__c</fullName>
        <label>Beamer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Campaign_Count__c</fullName>
        <label>Campaign Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Cleaned_Count_Since_Send__c</fullName>
        <label>Cleaned Count Since Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Cleaned_Count__c</fullName>
        <label>Cleaned Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Create_New_Leads_From_MailChimp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Setting to have the system poll hourly for new MailChimp Subscribers and create them as Leads in Salesforce.</inlineHelpText>
        <label>Create New Leads From MailChimp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Date_Created__c</fullName>
        <label>Date Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Default_From_Email__c</fullName>
        <label>Default From Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Default_From_Name__c</fullName>
        <label>Default From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Default_Language__c</fullName>
        <label>Default Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Default_Subject__c</fullName>
        <label>Default Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Email_Type_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiple Email Formats</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Group_Count__c</fullName>
        <label>Group Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Grouping_Count__c</fullName>
        <label>Grouping Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Cleaned_Sync_Date__c</fullName>
        <label>Last Cleaned Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Subscribed_Sync_Date__c</fullName>
        <label>Last Subscribed Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Sync_Status__c</fullName>
        <label>Last Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Unsubscribed_Sync_Date__c</fullName>
        <label>Last Unsubscribed Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__List_Rating__c</fullName>
        <label>List Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <externalId>true</externalId>
        <label>MailChimp ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Count_Since_Send__c</fullName>
        <label>Member Count Since Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Merge_Var_Count__c</fullName>
        <label>Merge Var Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Modules__c</fullName>
        <label>Modules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Name_Changed_Date__c</fullName>
        <label>Name Changed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Subscribe_URL_Long__c</fullName>
        <label>Subscribe URL Long</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__Subscribe_URL_Short__c</fullName>
        <label>Subscribe URL Short</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MC4SF__Sync_Setting__c</fullName>
        <label>Sync Setting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Keep All Activity</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 1 Year</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 6 Months</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 3 Months</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 1 Months</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 14 Days</fullName>
                </value>
                <value>
                    <fullName>Keep Activity for 7 Days</fullName>
                </value>
                <value>
                    <fullName>Sync Subscribers Only</fullName>
                    <default>true</default>
                    <label>Sync Subscribers Only</label>
                </value>
                <value>
                    <fullName>Do Not Sync</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Target_Sub_Rate__c</fullName>
        <label>Target Sub Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unmapped_Fields__c</fullName>
        <label>Unmapped Fields</label>
        <summaryFilterItems>
            <field>MC4SF__MC_Merge_Variable__c.MC4SF__Contact_Field_Mapping__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MC4SF__MC_Merge_Variable__c.MC4SF__Lead_Field_Mapping__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>MC4SF__MC_Merge_Variable__c.MC4SF__MC_List__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unsubscribe_Count_Since_Send__c</fullName>
        <label>Unsubscribe Count Since Send</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Unsubscribe_Count__c</fullName>
        <label>Unsubscribe Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__Use_Awesomebar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awesome Bar Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Visibility__c</fullName>
        <label>Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MC List</label>
    <listViews>
        <fullName>MC4SF__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MC List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>